--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.3",
     "string-similarity": "^4.0.4",
     "uuid": "^11.1.0",
-    "validator": "^13.12.0",
+    "validator": "^13.15.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
