--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^7.0.3",
+    "pdf-parse": "^1.1.1",
     "string-similarity": "^4.0.4",
     "uuid": "^11.1.0",
     "validator": "^13.15.0",
