--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@types/xlsx": "^0.0.35",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "iconv-lite": "^0.6.3",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
