--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
+    "@types/pdf-parse": "^1.1.5",
     "nodemon": "^3.1.9",
     "prisma": "^6.12.0",
     "ts-node": "^10.9.2",
