--- a/Copy.env
+++ b/Copy.env
@@ -1,10 +1,13 @@
-DATABASE_URL="postgresql://*************"
-APP_URL="http://1*********"
-FRONTEND_URL="http://*************"
-JWT_SECRET=*****************
-PORT=****
 
-node_mailer_user=tq***********
-NODE_MAILER_PASSWORD=**** **** **** ****
+DATABASE_URL="postgresql://postgres:****************"
+# APP_URL="http://192.168********"
+APP_URL="https://scholars*************************"
+FRONTEND_URL="http://19****************"
+JWT_SECRET=D7************
+PORT=3001
 
-
+node_mailer_user=tqmh*********
+NODE_MAILER_PASSWORD=meie********
+ 
+ 
+ 
