--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node build/index.js",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node index.ts"
+    "dev": "nodemon --exec ts-node index.ts",
+    "migrate:diagnosis-status": "ts-node scripts/migrate-all-diagnosis-status.ts"
   },
   "keywords": [],
   "author": "",
