--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.3",
     "pdf-parse": "^1.1.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "string-similarity": "^4.0.4",
     "uuid": "^11.1.0",
     "validator": "^13.15.0",
@@ -43,6 +45,8 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.13.10",
     "@types/pdf-parse": "^1.1.5",
+    "@types/socket.io": "^3.0.1",
+    "@types/socket.io-client": "^1.4.36",
     "nodemon": "^3.1.9",
     "prisma": "^6.12.0",
     "ts-node": "^10.9.2",
